<resources>
    <string name="app_name">UPTODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_user">Log In</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_forgot_password">Forgot Password?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="sign_up_user">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="username">Username</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name = "undo_deleted">Undo recent deletion operation?</string>

    <string name="new_goal_plans">Break your goals down into muliple tasks.\nDo this so that you can conveniently \ntrack your progress</string>
</resources>