<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:id="@+id/container">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            android:background="@color/white"
            android:id="@+id/tb_auth" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_user"
            android:textStyle="bold"
            android:textSize="36sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_username_sign_up"
            app:endIconMode="clear_text"
            android:layout_marginTop="50dp"
            android:hint="@string/username"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/enter_your_username"
                android:textColorHint="@color/hint_selector"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_email_sign_up"
            app:endIconMode="clear_text"
            android:hint="@string/user_email"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_your_email"
                android:textColorHint="@color/hint_selector"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_passsword_sign_up"
            app:endIconMode="password_toggle"
            android:layout_marginTop="10dp"
            android:hint="@string/user_password"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_confirm_passsword_sign_up"
            app:endIconMode="password_toggle"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                />

        </com.google.android.material.textfield.TextInputLayout>



        <androidx.appcompat.widget.AppCompatButton

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="48dp"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:background="@drawable/auth_button"
            android:textColor="@color/white"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:textAllCaps="false"
            android:id="@+id/btn_sign_up"
            />

        <LinearLayout
            android:layout_marginTop="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <View
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:padding="5dp"
                android:layout_gravity="center_vertical"

                />
            <View
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_gravity="center_vertical"
                />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="32dp"
            android:text="@string/continue_with_google"
            android:textSize="16sp"
            android:background="@drawable/google_button"
            android:textColor="@color/black"
            android:gravity="center"
            android:drawableStart="@drawable/ic_google"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:elevation="0dp"
            android:textAllCaps="false"
            />

        <androidx.appcompat.widget.AppCompatButton

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="22dp"
            android:text="@string/continue_with_facebook"
            android:textSize="16sp"
            android:background="@drawable/facebook_button"
            android:textColor="@color/white"
            android:gravity="center"
            android:drawableStart="@drawable/ic_facebook"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:elevation="0dp"
            android:textAllCaps="false"
            />

        <TextView
            android:id="@+id/tv_login_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_log_in"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:padding="10dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

    </LinearLayout>

</ScrollView>