<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"

    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            android:background="@color/white"
            android:id="@+id/tb_auth" >

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_user"
            android:textStyle="bold"
            android:textSize="36sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="120dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_email_login"
            app:endIconMode="clear_text"
            android:hint="@string/user_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"


                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_passsword_login"
            app:endIconMode="password_toggle"
            android:layout_marginTop="22dp"
            android:hint="@string/user_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_forgot_password"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:alpha="0.7"
            />

        <androidx.appcompat.widget.AppCompatButton

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="32dp"
            android:text="@string/login_user"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:background="@drawable/auth_button"
            android:textColor="@color/white"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            />

        <LinearLayout
            android:layout_marginTop="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <View
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:padding="5dp"
                android:layout_gravity="center_vertical"

                />
            <View
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_gravity="center_vertical"
                />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="32dp"
            android:text="@string/continue_with_google"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/google_button"
            android:textColor="@color/black"
            android:gravity="center"
            android:drawableStart="@drawable/ic_google"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:elevation="0dp"/>

        <androidx.appcompat.widget.AppCompatButton

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="22dp"
            android:text="@string/continue_with_facebook"
            android:textSize="16sp"
            android:background="@drawable/facebook_button"
            android:textColor="@color/white"
            android:gravity="center"
            android:textAllCaps="false"
            android:drawableStart="@drawable/ic_facebook"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:elevation="0dp"
            />

        <TextView
            android:id="@+id/tv_sign_up_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:padding="10dp"
            />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"/>






    </LinearLayout>



</ScrollView>